--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">96,418</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">WebPage Test3</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,550</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">WebPage Test1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,875</td><td></td><td></td></tr>
+<tr><td><a href="#t2">WebPage Test2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">22,693</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">62,118</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test</td><td><a href="#m0">open</a></td><td rowspan="1">1728454159892</td><td rowspan="1">96386</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">WebPage Test3 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">WebPageTest</td><td><a href="#m0">testHomePage</a></td><td rowspan="1">1732877030053</td><td rowspan="1">14168</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">WebPage Test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">WebPageTest</td><td><a href="#m1">testHomePage</a></td><td rowspan="1">1732877030053</td><td rowspan="1">15589</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">WebPage Test2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">WebPageTest</td><td><a href="#m2">testHomePage</a></td><td rowspan="1">1732877030451</td><td rowspan="1">17381</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">test#open</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>WebPage Test3</h2><h3 id="m0">WebPageTest#testHomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>WebPage Test1</h2><h3 id="m1">WebPageTest#testHomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>WebPage Test2</h2><h3 id="m2">WebPageTest#testHomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
