second commint 29th nov 2024

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -166,7 +166,7 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite parallel=&quot;tests&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite thread-count=&quot;15&quot; parallel=&quot;tests&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;utilities.ExtentListener&quot;/&gt;
   &lt;/listeners&gt;
@@ -235,20 +235,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testHomePage')
 data.setCell(0, 2, 'WebPageTest')
-data.setCell(0, 3, 17381);
+data.setCell(0, 3, 16868);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testHomePage')
 data.setCell(1, 2, 'WebPageTest')
-data.setCell(1, 3, 15589);
+data.setCell(1, 3, 14409);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testHomePage')
 data.setCell(2, 2, 'WebPageTest')
-data.setCell(2, 3, 14168);
+data.setCell(2, 3, 8851);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -289,27 +289,27 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testHomePage</span>
-                <span class="method-start">3879 ms</span>
+                <span class="method-start">2493 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testHomePage</span>
-                <span class="method-start">3879 ms</span>
+                <span class="method-start">3272 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testHomePage</span>
-                <span class="method-start">4277 ms</span>
+                <span class="method-start">6972 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18163 ms</span>
+                <span class="method-start">11594 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">19577 ms</span>
+                <span class="method-start">17879 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">21762 ms</span>
+                <span class="method-start">23893 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
